--- a/src/componentes/comps/cardSecao/cardsecao.scss
+++ b/src/componentes/comps/cardSecao/cardsecao.scss
@@ -1,3 +1,41 @@
-.container-card {
-    
+.container-secao {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: 3em;
+    padding: 10px;
+
+    background-color: #fff;
+
+    .container-text1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+    }
+
+    .container-text2 {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: left;
+    }
+
+    .container-text3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .final-secao {
+        text-align: center;
+    }
+
+    .text {
+        width: 70%;
+    }
+
+    .img-cores {
+        width: 15vh;
+        height: 15vh;
+    }
 }
