--- a/src/componentes/exercicio1/secao.scss
+++ b/src/componentes/exercicio1/secao.scss
@@ -1,7 +1,7 @@
 .page-secao {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    height: 150vh;
 
     .container-header {
         display: flex;
@@ -18,5 +18,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        background-color: #F5F6FA;
     }
 }
